--- a/styles/main.css
+++ b/styles/main.css
@@ -162,23 +162,40 @@ form {
     font-size: 1.5em;
   }
 
-  .MultiCarousel{ 
-    float: left; 
-    overflow: hidden; 
-    padding: 15px;
-    width: 100%; 
-    position:relative; 
-    }
-  .MultiCarousel .MultiCarousel-inner { transition: 1s ease all; float: left; }
-      .MultiCarousel .MultiCarousel-inner .item { float: left;}
-      .MultiCarousel .MultiCarousel-inner .item > div { text-align: center; padding:10px; margin:10px; background:#f1f1f1; color:#666;}
-  .MultiCarousel .leftLst, .MultiCarousel .rightLst { position:absolute; border-radius:50%;top:calc(50% - 20px); }
-  .MultiCarousel .leftLst { left:0; }
-  .MultiCarousel .rightLst { right:0; }
+  /* ----------------CARRUSEL DE IMAGENES SACADO DE https://codingyaar.com/bootstrap-4-carousel-multiple-items-responsive */
+  .cards-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+  .card img {
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .card {
+    margin: 0 0.5em;
+    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+    border: none;
+    border-radius: 0;
+  }
+  .carousel-inner {
+    padding: 1em;
+  }
+  .carousel-control-prev,
+  .carousel-control-next {
+    background-color: #e1e1e1;
+    width: 5vh;
+    height: 5vh;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .card-img-top{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
   
-      .MultiCarousel .leftLst.over, .MultiCarousel .rightLst.over { pointer-events: none; background:#ccc; }
-
-
 
 /*---------  Selectores de ID ----------*/
 #search-icon {
@@ -211,5 +228,11 @@ form {
       position: absolute;
       right: 10px;
       top: 60px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .card img {
+      height: 11em;
     }
   }
