--- a/styles/main.css
+++ b/styles/main.css
@@ -175,10 +175,20 @@ form {
     margin: 0 0.5em;
     box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
     border: none;
-    border-radius: 0;
+    border-radius: 1;
+    transition: all 0.2s ease-in-out;
   }
+
+  .card:hover {
+    box-shadow: 0px 0px 10px 2px #ddd;
+    transform: scale(0.9);
+    background-color: #ddd;
+    z-index: 100;
+}
+
   .carousel-inner {
     padding: 1em;
+    transition: transform 0.5s ease-in-out;
   }
   .carousel-control-prev,
   .carousel-control-next {
@@ -194,8 +204,12 @@ form {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: 0;
   }
   
+  .carousel-item {
+    transition: transform 0.3s ease-in-out, opacity 0.6s ease-in-out;
+}
 
 /*---------  Selectores de ID ----------*/
 #search-icon {
