--- a/styles/home.css
+++ b/styles/home.css
@@ -133,6 +133,8 @@ form {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    position: absolute;
+    right: 15px;
   }
 
   .search-container form {
@@ -216,9 +218,8 @@ form {
 }
 
 /*---------  Selectores de ID ----------*/
-#search-icon {
+#search-icon{
     position: absolute;
-    right: 35px;
     top: 50%;
     transform: translateY(-50%);
 }
